--- a/build
+++ b/build
@@ -12,7 +12,7 @@ if [ -x ake ]
 then
     echo -n    # (An actual command seems syntactically required here)
 else
-    (curl 'http://github.com/darius/ake/tree/master%2Fake?raw=true' -o ake &&
+    (curl 'http://github.com/darius/ake/raw/master/ake' -o ake &&
      chmod +x ake) || exit 1
 fi
 
